objects/SGR_Lowest_Cost_Plan_Option__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account__r.External_ID__c</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SGR Lowest Cost Plan Options</relationshipLabel>
        <relationshipName>SGR_Lowest_Cost_Plan_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Region__c</fullName>
        <formula>TEXT(Case__r.Reason)</formula>
        <label>Case Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SGR Lowest Cost Plan Options</relationshipLabel>
        <relationshipName>SGR_Lowest_Cost_Plan_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingType__c</fullName>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PREM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LowestCostOption2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lowest Cost Option 2</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>SGR Lowest Cost Plan Options</relationshipLabel>
        <relationshipName>SGR_Lowest_Cost_Plan_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LowestCostOption3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lowest Cost Option 3</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>SGR Lowest Cost Plan Options (Lowest Cost Option 3)</relationshipLabel>
        <relationshipName>SGR_Lowest_Cost_Plan_Options1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MarketSegment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RenewalEffectiveDate__c</fullName>
        <label>Renewal Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SGR Lowest Cost Plan Option</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Lowest_Cost_Plan</fullName>
        <columns>Division__c</columns>
        <columns>RenewalEffectiveDate__c</columns>
        <columns>Type__c</columns>
        <columns>MarketSegment__c</columns>
        <columns>FundingType__c</columns>
        <columns>LowestCostOption2__c</columns>
        <columns>LowestCostOption3__c</columns>
        <filterScope>Mine</filterScope>
        <label>Lowest Cost Plan</label>
    </listViews>
    <nameField>
        <label>SGR Lowest Cost Plan Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SGR Lowest Cost Plan Options</pluralLabel>
    <recordTypes>
        <fullName>SGR_Production_Lowest_Cost_Plan_Optiom</fullName>
        <active>true</active>
        <label>SGR Production Lowest Cost Plan Optiom</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>